@@ -208,11 +208,6 @@ public final class DirectPostingsFormat extends PostingsFormat {
             ((postings!=null) ? RamUsageEstimator.sizeOf(postings) : 0) + 
             ((payloads!=null) ? RamUsageEstimator.sizeOf(payloads) : 0);
       }
-
-      @Override
-      public Iterable<? extends Accountable> getChildResources() {
-        return Collections.emptyList();
-      }
     }
 
     // TODO: maybe specialize into prx/no-prx/no-frq cases?
@@ -260,11 +255,6 @@ public final class DirectPostingsFormat extends PostingsFormat {
          }
          
          return sizeInBytes;
-      }
-      
-      @Override
-      public Iterable<? extends Accountable> getChildResources() {
-        return Collections.emptyList();
       }
     }
 
@@ -542,11 +532,6 @@ public final class DirectPostingsFormat extends PostingsFormat {
       }
       
       return sizeInBytes;
-    }
-    
-    @Override
-    public Iterable<? extends Accountable> getChildResources() {
-      return Collections.emptyList();
     }
 
     @Override
