@@ -19,7 +19,6 @@ package org.apache.lucene.codecs.memory;
 
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 
 import org.apache.lucene.index.FieldInfo;
 import org.apache.lucene.index.IndexOptions;
@@ -78,11 +77,6 @@ class FSTTermOutputs extends Outputs<FSTTermOutputs.TermData> {
         ramBytesUsed += RamUsageEstimator.sizeOf(bytes);
       }
       return ramBytesUsed;
-    }
-
-    @Override
-    public Iterable<? extends Accountable> getChildResources() {
-      return Collections.emptyList();
     }
     
     // NOTE: actually, FST nodes are seldom 
