@@ -511,11 +511,6 @@ class SimpleTextDocValuesReader extends DocValuesProducer {
   }
 
   @Override
-  public Iterable<? extends Accountable> getChildResources() {
-    return Collections.emptyList();
-  }
-
-  @Override
   public String toString() {
     return getClass().getSimpleName() + "(fields=" + fields.size() + ")";
   }
