@@ -18,7 +18,6 @@ package org.apache.lucene.util;
  */
 
 import java.io.IOException;
-import java.util.Collections;
 
 import org.apache.lucene.search.DocIdSetIterator;
 
@@ -144,10 +143,5 @@ public abstract class BitSet implements MutableBits, Accountable {
       }
 
     });
-  }
-
-  @Override
-  public Iterable<? extends Accountable> getChildResources() {
-    return Collections.emptyList();
   }
 }
